--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -8,8 +8,6 @@
 </head>
 <body>
   <div id="root">Not rendered</div>
-  <script src="https://unpkg.com/react@18.2.0/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.development.js"></script>
-  <script src="./App.js"></script>
+  <script type="module" src="./App.jsx"></script>
 </body>
 </html>
