--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <title>Adopt Me (Version 8)</title>
 </head>
 <body>
+  <div id="modal"></div>
   <div id="root">Not rendered</div>
   <script type="module" src="./App.jsx"></script>
 </body>
